refine aggregate return types for groupBy→pivot chains
- Add refinedAggReturnType() helper that uses concrete source column type
  instead of generic NUMBER for aggregates like SUM(integerCol) → Integer
- Update 6 call sites in compileGroupBy and compileAggregate
- Add 3 pivot integration tests including ported PCT
  testPivot_SingleMultiple_Dynamic_Aggregation
- All 1072 engine tests pass